--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/microphone_scheduler?createD
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = 1234
+spring.datasource.password = Zebu2025!!
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle= true
