--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/microphone_scheduler?createD
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = Zebu2025!!
+spring.datasource.password = 1234
 
 
 
